# Design2Code

./: pyproject.toml  setup.py
Design2Code/metrics/: visual_score.py
