[project]
name = "design2code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "setuptools>=80.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
Design2Code = ["py.typed"]
